// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the H2 component should accept additional props 1`] = `
<Text
  accessible={false}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  "God is most glorified in us when we are most satisfied in Him" ― John Piper
</Text>
`;

exports[`the H2 component should accept and render passed in styles 1`] = `
<Text
  style={
    Object {
      "color": "salmon",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  Salmon text
</Text>
`;

exports[`the H2 component should render a loading state 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  Default H2 text
</Text>
`;

exports[`the H2 component should render a loading state with correct positioning (margins) 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
      "paddingBottom": 20.02,
      "paddingTop": 24,
    }
  }
>
  Padded H2 text
</Text>
`;

exports[`the H2 component should render correctly 1`] = `
<Text
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
    }
  }
>
  Default H2 text
</Text>
`;

exports[`the H2 component should render with correct padding 1`] = `
<Text
  padded={true}
  style={
    Object {
      "color": "#303030",
      "fontFamily": "InterUI-Black",
      "fontSize": 36,
      "lineHeight": 41.4,
      "paddingBottom": 20.02,
      "paddingTop": 24,
    }
  }
>
  Padded H2 text
</Text>
`;
